--- a/pages/templates/pages/home.html
+++ b/pages/templates/pages/home.html
@@ -411,264 +411,6 @@
     </div>
     {% include 'cases/list.html' %}
     {% include 'partners/list.html' %}
-    <div id="bloggers" class="bloggers">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-12 col-lg-12 col-xl-12">
-                    <h2>{% trans "Bloggers" %}</h2>
-                </div>
-            </div>
-            <div class="slider-blogs">
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/skaif_ura/?igshid=YmMyMTA2M2Y="
-                            >skaif_ura</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/skaif_ura/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger1.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger1.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>164к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/the.madaa/?igshid=YmMyMTA2M2Y="
-                            >the.madaa</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/the.madaa/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger2.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger2.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>58к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/lusuy.channel/?igshid=YmMyMTA2M2Y="
-                            >lusuy.channel</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/lusuy.channel/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger3.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger3.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>150к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/naz_kamaz/?igshid=YmMyMTA2M2Y="
-                            >naz_kamaz</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/naz_kamaz/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger4.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger4.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>200к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/hatebloggers/?igshid=YmMyMTA2M2Y="
-                            >hatebloggers</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/hatebloggers/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger5.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger5.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>140к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://instagram.com/hatebloggers?igshid=YmMyMTA2M2Y="
-                            >sergiy.bunda</a
-                        >
-                    </h6>
-                    <a
-                        href="https://instagram.com/hatebloggers?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger6.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger6.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>164к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/pashalimbleat/?igshid=YmMyMTA2M2Y="
-                            >pashalimbleat</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/pashalimbleat/?igshid=YmMyMTA2M2Y="
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/blogger7.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/blogger7.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>365к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/meshtiish/?igshid=YmMyMTA2M2Y%3D"
-                            >meshtiish</a
-                        >
-                    </h6>
-                    <a
-                        href="https://www.instagram.com/meshtiish/?igshid=YmMyMTA2M2Y%3D"
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/meshtiish.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/meshtiish.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>70к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a
-                            href="https://www.instagram.com/andrey.martynenko/"
-                            >andrey.martynenko</a
-                        >
-                    </h6>
-                    <a href="https://www.instagram.com/andrey.martynenko/"
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/martynenko.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/martynenko.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>407к {% trans 'instagram followers' %}</p>
-                </div>
-                <div class="blogger">
-                    <h6>
-                        <a href="https://www.instagram.com/zabolotnuygolos/"
-                            >zabolotnuygolos</a
-                        >
-                    </h6>
-                    <a href="https://www.instagram.com/zabolotnuygolos/"
-                        ><img
-                            class="blogger-arrow"
-                            src="{% static 'img/arrow.svg' %}"
-                            alt=""
-                    /></a>
-                    <picture
-                        ><source
-                            srcset="{% static 'img/zabolotnuygolos.jpg.webp' %}"
-                            type="image/webp" />
-                        <img
-                            class="blogger-img webpexpress-processed"
-                            src="{% static 'img/zabolotnuygolos.jpg' %}"
-                            alt=""
-                    /></picture>
-                    <p>66к {% trans 'instagram followers' %}</p>
-                </div>
-            </div>
-        </div>
-    </div>
     <div id="contacts" class="contacts">
         <div class="container">
             <div class="row">
@@ -701,202 +443,6 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-12 col-xl-5">
-                    <div class="cont">
-                        <img
-                            src="{% static 'img/icon-phone.svg' %}"
-                            alt="" />
-                        <a href="tel:+38 096 0896265">+38 096 0896265</a>
-                    </div>
-                    <div class="cont">
-                        <img
-                            src="{% static 'img/icon-post.svg' %}"
-                            alt="" />
-                        <a href="mailto:hustlerdigitalagency@gmail.com"
-                            >hustlerdigitalagency@gmail.com</a
-                        >
-                    </div>
-                    <div class="cont">
-                        <img
-                            src="{% static 'img/icon-telegram.svg' %}"
-                            alt="" />
-                        <a href="https://t.me/hustleragency"
-                            >@hustleragency</a
-                        >
-                    </div>
-                </div>
-                <div class="col-12 col-md-1 col-lg-12 col-xl-2">
-                    <a class="arrow-top" href="#main"
-                        ><img
-                            src="{% static 'img/ArrowUp.svg' %}"
-                            alt=""
-                    /></a>
-                </div>
-                <div
-                    class="col-12 col-md-5 col-lg-12 col-xl-5 footer-right">
-                    <a href="/"
-                        ><img
-                            src="{% static 'img/Logo_hustlerdigital-11.svg' %}"
-                            alt=""
-                    /></a>
-                    <p>© 2022 HUSTLER DIGITAL</p>
-                    <p>
-                        <a href="/uk/privacy-policy/">
-                            {% trans "Privacy Policy" %}
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
+        {% include 'template-parts/footer.html' %}
     </div>
-{% endblock %}
-{% block scripts %}
-    <script src="{% static 'js/jquery-2.2.0.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'js/slick.min.js' %}"></script>
-    <script src="{% static 'js/metismenujs.js' %}"></script>
-    <script src="{% static 'js/onoffcanvas.js' %}"></script>
-    <script src="{% static 'js/lightbox.min.js' %}"></script>
-    <script src="{% static 'js/mm-onoffcanvas.js' %}"></script>
-    <script src="{% static 'js/jquery.scrollmagic.min.js' %}"></script>
-    <script src="{% static 'js/ScrollTrigger.min.js' %}"></script>
-    <script src="{% static 'js/index.js' %}"></script>
-    <script>
-        $(".slider-w-flip").slick({
-            dots: false,
-            arrows: true,
-            slidesToShow: 3,
-            slidesToScroll: 1,
-            centerMode: true,
-            responsive: [
-                {
-                    breakpoint: 1024,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        infinite: true,
-                        dots: false
-                    }
-                },
-                {
-                    breakpoint: 600,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        arrows: false
-                    }
-                },
-                {
-                    breakpoint: 480,
-                    settings: {
-                        dots: true,
-                        arrows: true,
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        centerMode: false
-                    }
-                }
-            ]
-        });
-
-        $(".slider-blogs").slick({
-            dots: false,
-            arrows: true,
-            slidesToShow: 4,
-            slidesToScroll: 1,
-            centerMode: true,
-            responsive: [
-                {
-                    breakpoint: 1024,
-                    settings: {
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        infinite: true,
-                        dots: false
-                    }
-                },
-                {
-                    breakpoint: 600,
-                    settings: {
-                        dots: false,
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        arrows: false
-                    }
-                },
-                {
-                    breakpoint: 480,
-                    settings: {
-                        dots: false,
-                        arrows: true,
-                        slidesToShow: 1,
-                        slidesToScroll: 1,
-                        centerMode: false
-                    }
-                }
-            ]
-        });
-    </script>
-
-    <script>
-        $(document).on("scroll", window, function () {
-            var element = document.getElementById("header");
-            if ($(window).scrollTop() > 250) {
-                element.classList.add("scroll");
-            } else {
-                element.classList.remove("scroll");
-            }
-        });
-    </script>
-
-    <script>
-        window.counter = function () {
-            var span = this.querySelector("span");
-            var current = parseInt(span.textContent);
-
-            span.textContent = current + 1;
-        };
-
-        document.addEventListener("DOMContentLoaded", function () {
-            ScrollTrigger.init();
-        });
-    </script>
-
-    <script>
-        $(".flip-container").click(function () {
-            $(".flip-container").toggleClass("active");
-        });
-
-        function countTo(number, selector, before, after) {
-            if (!selector) return;
-
-            let from = 0;
-            let to = number;
-            let step = 1;
-            let duration = 5;
-            let interval = (duration / number) * 1000;
-
-            if (from == to) {
-                document.querySelector(selector).textContent =
-                    before + from + after;
-                return;
-            }
-
-            let counter = setInterval(function () {
-                from += step;
-                document.querySelector(selector).textContent =
-                    before + from + after;
-
-                if (from == to) {
-                    clearInterval(counter);
-                }
-            }, interval);
-        }
-        countTo(10, ".num1", "", "+");
-        countTo(28, ".num2", "", "");
-        countTo(100, ".num3", ">", "M");
-        countTo(120, ".num4", "", "+");
-    </script>
 {% endblock %}
